Updating personal details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Desperate for work pls hire</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Victorville, California. You've driven through it</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, video games, playing bass, playing board games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>This</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, California<p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Money</p>
     </section>
 
     <footer id="footer">
