--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Desperate for work pls hire</p>
+      <p>My name is Joshua Bidwell, and I'm currently training to become a full-stack web developer</p>
       <h1>Where I'm From</h1>
-      <p>Victorville, California. You've driven through it</p>
+      <p>I'm from a small city in the Inland Empire called Victorville. If you've ever driven to Las Vegas, you've been right through it.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Reading, video games, playing bass, playing board games</p>
+      <p>I enjoy reading, video games, playing bass, playing board games</p>
       <h1>What's your dream job?</h1>
-      <p>This</p>
+      <p>My dream job would be as an NBA player, but seeing as I'm 5'9", have very little athletic skill, and am thirty, I would like to become a full-stack web developer instead.</p>
       <h1>Where do you live?</h1>
-      <p>San Diego, California<p>
+      <p>I currently live in San Diego, California with my wife and our dog.<p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Money</p>
+      <p>I would like to become a web developer not just for the promise of good pay and stability, but to be at the forefront of new web-based technologies as they arise.</p>
     </section>
 
     <footer id="footer">
