Minor changes to make sure git is working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>I currently live in San Diego, California with my wife and our dog.<p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I would like to become a web developer not just for the promise of good pay and stability, but to be at the forefront of new web-based technologies as they arise.</p>
+      <p>I would like to become a web developer not just for the prospect of good pay and stability, but to be at the forefront of new web-based technologies as they arise.</p>
     </section>
 
     <footer id="footer">
